--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,17 @@
 .navContainer {
-  font-size: '24px';
+  font-size: 24px;
 }
 
 .ulContainer {
-  justify-content: 'space-between';
-  width: '100%';
+  /* justify-content: space-between; */
+  width: 100%;
+  gap: 5px;
+}
+.css.navLeft {
+  float: left;
+}
+
+.css.navRight {
+  clear: both;
+  float: right;
 }
