--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,13 +9,7 @@
   gap: 5px;
 }
 
-.navLeft {
-  /* float: left; */
-}
-
 .navRight {
-  /* clear: both;
-  float: right; */
   margin-left: auto;
 
   @media screen and (max-width: 991px) {
@@ -23,9 +17,10 @@
   }
 }
 
-/* Breakpoints:
+/* Breakpoints 
+https://getbootstrap.com/docs/5.3/layout/breakpoints/
 Small	sm	≥576px
 Medium	md	≥768px
-! Large	lg	≥992px
+! >>> Large	lg	≥992px 
 Extra large	xl	≥1200px
 Extra extra large	xxl	≥1400px */
